Another pass on part 2, 3, 4

--- a/a03-field.tex
+++ b/a03-field.tex
@@ -8,7 +8,7 @@
 \begin{itemize}
 \item \textbf{Ring:} A set $R$ that is an abelian group under addition $(+)$, equipped with a multiplication $(\cdot)$ that is closed and associative, and such that multiplication distributes over addition on both sides: $a\cdot(b+c)=a\cdot b+a\cdot c$ and $(a+b)\cdot c=a\cdot c+b\cdot c$ for all $a,b,c\in R$. \emph{(Multiplication is not necessarily commutative (e.g., a matrix multiplication), and an identity element for $(\cdot)$ is optional unless stated “ring with unity”.)}
 \item \textbf{Field:} A set $F$ that is an abelian group under $(+)$, whose nonzero elements $F^\times=F\setminus\{0\}$ form an abelian group under $(\cdot)$, with multiplication distributing over addition.
-\item \textbf{Galois Field ($\mathrm{GF}(p^n)$):} A field with a finite number of elements, necessarily $p^n$ for some prime $p$ and positive integer $n$.
+\item \textbf{Galois Field ($\mathrm{GF}(p^n)$):} A field with $p^n$ elements for some prime $p$ and positive integer $n$.
 \item \textbf{$\mathbb{Z}_p$ ($\mathbb{Z}/p\mathbb{Z}$):} For a prime $p$, the set $\{0,1,\ldots,p-1\}$ with addition and multiplication modulo $p$ forms a finite field. More generally, for any integer $m\ge 2$, $\mathbb{Z}_m$ is a commutative ring, and it is a field iff $m$ is prime.\end{itemize}
 \end{tcolorbox}
 
