--- a/b06-ggsw.tex
+++ b/b06-ggsw.tex
@@ -24,4 +24,4 @@ It is sufficient to decrypt the GGSW ciphertext's any one GLev ciphertext's any 
 
 \subsection{GSW and RGSW}
 
-GSW is GLev with $n=1$. RGSW is GLev with $k=1$.
+GSW is GGSW with $n=1$. RGSW is GGSW with $k=1$.
