--- a/c02-glwe-add-plain.tex
+++ b/c02-glwe-add-plain.tex
@@ -1,7 +1,7 @@
-Suppose we have a GLWE ciphertext $C$ and a new plaintext polynomial $\Lambda$ as follows: 
+Suppose we have a GLWE ciphertext \textsf{ct} and a new plaintext polynomial $\Lambda$ as follows: 
 
 
-$C = \textsf{GLWE}_{S, \sigma}(\Delta M) = ( A_1, A_2, \gap{$\cdots$}, A_{k-1}, B) \in \mathcal{R}_{\langle n,q \rangle}^{k + 1}$
+$\textsf{ct} = \textsf{GLWE}_{S, \sigma}(\Delta M) = ( A_0, A_1, \gap{$\cdots$}, A_{k-1}, B) \in \mathcal{R}_{\langle n,q \rangle}^{k + 1}$
 
 $\Lambda$: a new plaintext polynomial
 
@@ -11,7 +11,7 @@ $ $
 
 \noindent Let's define the following ciphertext-to-plaintext addition operation: 
 
-$C + \Delta\Lambda = ( A_1, \text{ } A_2, \gap{$\cdots$}, A_{k-1}, \text{ } B + \Delta \Lambda)$
+$\textsf{ct} + \Delta\Lambda = ( A_0, \text{ } A_1, \gap{$\cdots$}, A_{k-1}, \text{ } B + \Delta \Lambda)$
 
 $ $
 
@@ -20,9 +20,9 @@ $ $
 \begin{tcolorbox}[title={\textbf{\tboxlabel{\ref*{sec:glwe-add-plain}} GLWE Homomorphic Addition with a Plaintext}}]
 $\textsf{GLWE}_{S, \sigma}(\Delta M) + \Delta\Lambda $
 
-$=  (\{A_i^{\langle 1 \rangle}\}_{i=0}^{k-1}, \text{ } B^{\langle 1 \rangle}) + \Delta\Lambda$
+$=  (\{A_i\}_{i=0}^{k-1}, \text{ } B) + \Delta\Lambda$
 
-$=  (\{A_i^{\langle 1 \rangle}\}_{i=0}^{k-1}, \text{ } B^{\langle 1 \rangle} + \Delta\Lambda)$
+$=  (\{A_i\}_{i=0}^{k-1}, \text{ } B + \Delta\Lambda)$
 
 $= \textsf{GLWE}_{S, \sigma}(\Delta (M + \Lambda) )$
 \end{tcolorbox}
@@ -40,7 +40,7 @@ This means that adding a ($\Delta$-scaled) plaintext polynomial $\Lambda$ to a G
 
 $B + \Delta \cdot \Lambda = \sum\limits_{i=0}^{k-1}{(A_i \cdot S_i)} + \Delta \cdot M + E + \Delta \cdot \Lambda = \sum\limits_{i=0}^{k-1}{(A_i \cdot S_i)} + \Delta \cdot (M + \Lambda) + E$  \\
 
-This means that $(A_1, A_2, ... \text{ } A_{k-1}
+This means that $(A_0, A_1, ... \text{ } A_{k-1}
 , B + \Delta \Lambda)$ form the ciphertext $\textsf{GLWE}_{S, \sigma}(\Delta (\Lambda + M))$
 \item Thus, \\
 $\textsf{GLWE}_{S, \sigma}(\Delta M) + \Delta\Lambda$ \\
@@ -56,6 +56,4 @@ $= \textsf{GLWE}_{S, \sigma}(\Delta (M + \Lambda))$
 \end{myproof}
 
 
-\subsection{Discussion}
-
-\para{Noise Growth: } Note that after decryption, the original ciphertext $C +\Lambda$'s noise $E$ stays the same as before. This means that ciphertext-to-plaintext addition does not increase the noise level.
+\para{Noise Growth: } Note that after decryption, the original ciphertext $\textsf{ct} +\Delta\Lambda$'s noise $E$ stays the same as before. This means that ciphertext-to-plaintext addition does not increase the noise level.
